# parallel-fdm

./: .gitignore  CMakeLists.txt  build.bat  build.sh  config  fdm.c  fdm.h  fdm_plots.py  io.c  io.h  main.c  parallel.c  parallel.h
inc/: fdm.h  io.h  parallel.h  reaction.h  shape.h
scripts/: plot.py  plotting.m  speedup.py
src/: fdm.c  io.c  main.c  parallel.c  reaction.c
tests/: CMakeLists.txt
tests/test_parse_reaction/: CMakeLists.txt
tests/test_process_distribution/: CMakeLists.txt  test_process_distribution.c
tests/test_shape_array/: CMakeLists.txt  test_shape_array.c
tests/test_speedup/: CMakeLists.txt  test_speedup.c
